Added a new link for creating a new name

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 label: 'Stats'
               },
               {
+                '@id': 'https://nomenexplorer.com/newname',
+                label: 'Create'
+              },
+              {
                 '@id': 'https://nomenexplorer.com/api/name',
                 label: 'API'
               }
